# daur-cuan-app

./: .gitignore  EXCHANGE_FEATURE_DOCS.md  README.md
frontend-app/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-app/src/: App.jsx  index.css
frontend-app/src/components/shared/: BottomNav.jsx  Modal.jsx  Toast.jsx
frontend-app/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  InputGroup.jsx
frontend-app/src/config/: constants.js
frontend-app/src/context/: AppContext.jsx
frontend-app/src/pages/: Achievement.jsx  Bank.jsx  Exchange.jsx  History.jsx  Home.jsx  Locations.jsx  Notification.jsx  Profile.jsx  Scan.jsx  Settings.jsx
rvm-machine/: CMakeLists.txt  main  main.cpp  rvm
server-api/: package-lock.json  package.json  server.js
